--- a/service/package.json
+++ b/service/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "glob": "^7.1.3",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
