--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "author": "chenshiru <chenshiru@100tal.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
+    "better": "^0.1.0",
+    "better-scroll": "^1.15.1",
     "vant": "^1.5.0-beta",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
